fixed label box overflow.  fixed linking to items in a stacking panel.

--- a/src/client/views/nodes/LabelBox.scss
+++ b/src/client/views/nodes/LabelBox.scss
@@ -8,19 +8,14 @@
 
 .labelBox-mainButton {
     width: 100%;
-    height: 100%;
+    height: max-content;
     border-radius: inherit;
     letter-spacing: 2px;
     text-transform: uppercase;
     overflow: hidden;
-    display:flex;
-}
-
-.labelBox-mainButtonCenter {
-    overflow: hidden;
-    display: inline;
-    align-items: center;
+    display: inline-block;
     margin: auto;
+    text-overflow: ellipsis;
 }
 
 .labelBox-params {
